--- a/frontend/Styling/echostyle.css
+++ b/frontend/Styling/echostyle.css
@@ -1,27 +1,32 @@
 body {
     background-color: #f8f9fa;
-    padding-top: 50px; 
 }
 
 #output {
     margin-top: 20px;
     padding: 20px;
     background-color: #ffffff;
-    border-radius: 5px;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#userInput {
+    /* border: 2px solid rgb(0, 0, 0); Grüne Umrandung */
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#userInput >p{
+    /* border: 2px solid rgb(0, 0, 0); Grüne Umrandung */
+    margin-top: 10px;
 }
 
 #logout {
     margin-top: 20px;
 }
 
-#delete-jwt {
-    background-color: #dc3545;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-}
 
 #delete-jwt:hover {
     background-color: #c82333;
